--- a/dedications.html
+++ b/dedications.html
@@ -26,7 +26,7 @@
         <div><span id="secs">48</span><br />Seconds</div>
      </div>
 
-     <script defer src="script.js"></script>
+     <script src="script.js"></script>
      <h1 class="title">Dedications</h1>
 
      <div class="nunu-photo-container">
