--- a/dedications.html
+++ b/dedications.html
@@ -31,7 +31,7 @@
 
      <div class="nunu-photo-container">
         <img 
-        src="/assets/nunu.png"
+        src="assets/nunu.png"
         alt="My black cat, Anubis (Nunu)"
         class="nunu-img"/>
     </div>
